(feat) migrate to maven