@@ -35,7 +35,7 @@ public class PostController {
     private static void checkValidRequest(BindingResult bindingResult) {
         if (bindingResult.hasErrors()) {
             List<String> errors = bindingResult.getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList();
-            throw new ValidationException(errors.getFirst());
+            throw new ValidationException(errors.get(0));
         }
     }
 
